<resources>
    <string name="app_name">WaterControl</string>

    <!-- PARA USO EN LAYOUTS -->

    <string name="email_example">jaimito@hotmail.com</string>
    <string name="text_example">Jorge Calvillo</string>
    <string name="waterlevel_example">50%</string>
    <string name="wateramount_example">80 lts/min</string>
    <string name="anomalies_example1">No hay ninguna anomalia actualmente</string>
    <string name="anomalies_example2">La cantidad de agua esta por debajo del 40%</string>
    <string name="num_example1">Veolia</string>
    <string name="servicio_pipa1">Pipas de agua</string>
    <string name="servicio_pipa2">Pipas ARSEN</string>

    <string name="recover_password">Recuperar Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="password">Contraseña</string>
    <string name="newpassword">Nueva Contraseña</string>
    <string name="againpassword">Repetir Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="sendrecoveremail">Recuperar contraseña</string>
    <string name="email">Correo Electrónico</string>
    <string name="savechanges">Guardar Cambios</string>
    <string name="goback">Regresar</string>
    <string name="callforwater">Soporte</string>
    <string name="settings">Cuenta</string>
    <string name="logout">Salir</string>
    <string name="menu">Menú Principal</string>
    <string name="changeemail">Cambiar Correo</string>
    <string name="changepassword">Cambiar Contraseña</string>
    <string name="enterpassword">Ingrese su nueva contraseña</string>
    <string name="enteremail">Ingrese el correo de su cuenta</string>
    <string name="entertokentittle">Ingrese el token recibido en su correo</string>
    <string name="enternewemail">Ingrese su anterior y su nuevo correo</string>
    <string name="enterdates">Ingrese sus datos personales</string>
    <string name="enternewpassword">Ingrese su anterior y su nueva contraseña</string>
    <string name="lastemail">Anterior Correo Electrónico</string>
    <string name="newemail">Nuevo Correo Electrónico</string>
    <string name="lastpassword">Contraseña Actual</string>
    <string name="actualinformation">Información Actual</string>
    <string name="waterlevel">Nivel actual del agua: </string>
    <string name="wateramount">Cantidad de flujo del agua:</string>
    <string name="anomalies">Última Anomalia:</string>
    <string name="record">Bitácora de Anomalías</string>
    <string name="contactsupport">Contactar Proveedor</string>
    <string name="requestpipa">Solicitar Servicio de Pipa</string>
    <string name="recordtotal">Historial de Anomalías</string>
    <string name="configurestorage">Configurar medio de almacenamiento</string>
    <string name="storagetype">Tipo de medio: </string>
    <string name="storagetypehint">Tipo</string>
    <string name="dimens">Dimensiones</string>
    <string name="long_text">Largo:</string>
    <string name="high_text">Alto:</string>
    <string name="wide_text">Ancho:</string>
    <string name="long_input">Largo</string>
    <string name="high_input">Alto</string>
    <string name="wide_input">Ancho</string>
    <string name="date">Fecha </string>
    <string name="anomalie">Anomalia</string>
    <string name="successfull_storage">Se registro con éxito las medidas de su almacenamiento</string>

    <!-- PARA USO EN CÓDIGO -->

    <string name="signup_successful">Se registro el usuario con Éxito</string>
    <string name="signup_failed">El usuario NO fue registrado con Éxito</string>
    <string name="recoveremail_send">Correo de Recuperación enviado: Favor de Verificar su bandeja de su correo</string>
    <string name="recoveremail_failed">El correo de ingresado no fue encontrado, favor de verificarlo</string>
    <string name="log_in_successful">Bienvenido de vuelta </string>
    <string name="log_in_failed">El Correo o la Contraseña es incorrecta</string>
    <string name="email_update_successful">Su Correo electrónico fue actualizado con éxito</string>
    <string name="email_update_failed">Su Correo electrónico NO pudo ser actualizado </string>
    <string name="password_update_successful">Su Contraseña fue actualizado con éxito</string>
    <string name="password_update_failed">Su Contraseña NO pudo ser actualizado </string>
    <string name="anomalie_alert">¡AVISO! Revise su historial de anomalias, ya que se a encontrado una nueva</string>
    <string name="button_accept">Aceptar</string>
</resources>
