<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_activity"
    android:background="@color/colorBackgroud">
    <!--xmlns:app="http://schemas.android.com/apk/res-auto" Agregar cuando se programe-->

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="52dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/actualinformation"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="52dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waterlevel"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_water_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/waterlevel_example"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_water_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/wateramount"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_water_amount_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/wateramount_example"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="49dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_water_anomalietitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/anomalies"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_water_anomalie1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/anomalies_example1"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_water_anomalie2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/anomalies_example2"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="317dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_record"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textCapSentences"
            android:letterSpacing="0"
            android:text="@string/record"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />


    </LinearLayout>

</RelativeLayout>