<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_activity"
    android:background="@color/colorBackgroud">

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="440dp"
        android:layout_above="@+id/button_register"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:boxBackgroundColor="@color/text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            app:boxBackgroundColor="@color/text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_lastname"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            app:boxBackgroundColor="@color/text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_user"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_input_passwordagain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/againpassword"
            app:boxBackgroundColor="@color/text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_passwordagain"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="197dp"
        android:layout_marginBottom="83dp"
        android:inputType="textCapSentences"
        android:letterSpacing="0"
        android:text="@string/register"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_goback"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="85dp"
        android:inputType="textCapSentences"
        android:letterSpacing="0"
        android:text="@string/goback"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />


</RelativeLayout>