<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".changepassword_activity"
    android:background="@color/colorBackgroud">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enternewpassword"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="193dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_lastpassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/lastpassword"
            app:boxBackgroundColor="@color/text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_lastpassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_new_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/newpassword"
            app:boxBackgroundColor="@color/text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_new_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/againpassword"
            app:boxBackgroundColor="@color/text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password_again"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="360dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_savechanges"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textCapSentences"
            android:letterSpacing="0"
            android:text="@string/savechanges"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_goback"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textCapSentences"
            android:letterSpacing="0"
            android:text="@string/goback"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>